# eagle-router

./: .env.example  .gitignore  README.md  STREAMLIT_README.md  common.py  db.py  eagle.py  eagle_router.py  example_usage.ipynb  mongodb_client.py  pyproject.toml  streamlit_app.py
notebooks/: 1.data-preparation.ipynb  2.train-and-evaluate-v2.ipynb  2.train-and-evaluate.ipynb  db_old_version.py  eagle_old_version.py  handling_more_than_2_models.ipynb  trained_elo_scores.json
